add auto dark mode

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,14 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary   : #b100fe;   // Electric Purple
+$secondary : #146f9b;   // Deep Ocean Blue
+$accent    : #0090ff;   // Sky Blue
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark      : #1D1D1D;   // Dark Gray
+$dark-page : #121212;   // Almost Black
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive  : #00ffee;   // Turquoise
+$negative  : #d763c9;   // Magenta Pink
+$info      : #003cff;   // Electric Blue
+$warning   : #fa729c;   // Salmon Pink
